File: components/nexus-blobstore-api/src/test/virtualthread/ThreadPinningDetectionTest.java